# OSel

./: Cargo.toml  Makefile  dick.json  readme.md  rust-toolchain.toml
.cargo/: config.toml
esp/: NvVars
esp/efi/boot/: bootx64.efi
src/: avganec.rs  cereal.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  main_bios.rs  qemuno.rs  testosterone.rs
tests/: basic_boot.rs  stack_overflow.rs
