[package]
name = "osel"
description = "OSel operating system"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 60

[features]
bios = []
uefi = []

[[bin]]
name = "OSel-bios"
path = "src/main_bios.rs"
test = false
required-features = ["bios"]

[[bin]]
name = "OSel-uefi"
path = "src/main_uefi.rs"
test = false
required-features = ["uefi"]

[lib]
name = "osel"
path = "src/lib.rs"
doctest = false
